--- a/_config.yml
+++ b/_config.yml
@@ -9,6 +9,9 @@ tz:
   offset: "UTC+09:00"
 links:
   easychair: "https://easychair.org/conferences/?conf=rc2021"
+images:
+  local1: "/images/nagoya-cstl.jpg"
+  local2: "/images/nu-esbldg.jpg"
 
 defaults:
   -
